fix(core): resolved code smells